Updated Chat plugin with correct functionality

--- a/chatplugin/controllers/chats/config_list.yaml
+++ b/chatplugin/controllers/chats/config_list.yaml
@@ -2,34 +2,17 @@ modelClass: CustomChat\ChatPlugin\Models\Chat
 
 list:
     columns:
-        id:
-            label: ID
-            type: number
-            searchable: true
-
         name:
             label: Chat Name
-            type: text
             searchable: true
-
-        user1_id:
+        user1:
             label: User 1
-            type: text
-            searchable: true
-
-        user2_id:
+            relation: user1
+            select: concat(first_name, ' ', last_name)
+        user2:
             label: User 2
-            type: text
-            searchable: true
-
+            relation: user2
+            select: concat(first_name, ' ', last_name)
         created_at:
             label: Created At
             type: datetime
-
-        toolbar:
-            buttons:
-                create:
-                    label: 'Create Chat'
-                    class: 'btn btn-primary'
-                    icon: 'icon-plus'
-                    href: '/backend/customchat/chatplugin/chats/create'
