--- a/chatplugin/controllers/messages/config_form.yaml
+++ b/chatplugin/controllers/messages/config_form.yaml
@@ -2,28 +2,24 @@ modelClass: CustomChat\ChatPlugin\Models\Message
 
 form:
     fields:
-        chat_id:
-            label: Chat
-            type: relation
-            nameFrom: name
-            span: left
-            required: true
-
-        user_id:
-            label: User
-            type: relation
-            nameFrom: login
-            span: right
-            required: true
-
         message:
             label: Message
             type: textarea
-            span: left
-            required: true
-
-        file_path:
-            label: Attach File
+        file:
+            label: Upload File
             type: fileupload
-            mode: attachment
-            span: right
+            mode: file
+        parent_message_id:
+            label: Reply To
+            type: relation
+            nameFrom: message
+        reactions:
+            label: Reactions
+            type: repeater
+            prompt: Add Reaction
+            form:
+                fields:
+                    emoji:
+                        label: Emoji
+                        type: text
+                        span: auto
