--- a/chatplugin/controllers/chats/config_form.yaml
+++ b/chatplugin/controllers/chats/config_form.yaml
@@ -6,18 +6,13 @@ form:
             label: Chat Name
             type: text
             span: left
-            required: true
-
         user1_id:
             label: User 1
             type: relation
-            nameFrom: login
             span: right
-            required: true
-
+            nameFrom: concat(first_name, ' ', last_name)
         user2_id:
             label: User 2
             type: relation
-            nameFrom: login
             span: right
-            required: true
+            nameFrom: concat(first_name, ' ', last_name)
