--- a/chatplugin/controllers/messages/config_list.yaml
+++ b/chatplugin/controllers/messages/config_list.yaml
@@ -3,34 +3,18 @@ modelClass: CustomChat\ChatPlugin\Models\Message
 
 list:
     columns:
-        id:
-            label: ID
-            type: number
-            searchable: true
-
-        chat_id:
-            label: Chat
-            type: text
-            searchable: true
-
-        user_id:
-            label: User
-            type: text
-            searchable: true
-
         message:
             label: Message
-            type: text
             searchable: true
-
+            type: text
+        user:
+            label: User
+            relation: user
+            select: concat(first_name, ' ', last_name)
+        chat:
+            label: Chat
+            relation: chat
+            select: name
         created_at:
             label: Created At
             type: datetime
-
-        toolbar:
-            buttons:
-                create:
-                    label: 'Create Chat'
-                    class: 'btn btn-primary'
-                    icon: 'icon-plus'
-                    href: '/backend/customchat/chatplugin/messages/create'
